# lameboy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: cartridge.cpp  cartridge.hpp  cpu.cpp  cpu.hpp  decoder.cpp  decoder.hpp  instructions.hpp  main.cpp  print.h  registry.hpp
test/: test_mts.cpp
utils/: generate_opcode_desc.py
